# cosc342-assignment02

./: .gitignore  .travis.yml  CMakeLists.txt  CSG.cpp  CSG.h  Camera.cpp  Camera.h  Colour.cpp  Colour.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Direction.cpp  Direction.h  Display.cpp  Display.h  Doxyfile.in  LightSource.cpp  LightSource.h  Material.h  Matrix.cpp  Matrix.h  NonCopyable.h  Normal.cpp  Normal.h  Object.cpp  Object.h  PinholeCamera.cpp  PinholeCamera.h  Point.cpp  Point.h  PointLightSource.cpp  PointLightSource.h  README.md  Ray.h  RayIntersection.h  Scene.cpp  Scene.h  SceneReader.cpp  (+10 more)
TestScenes/: cube.txt  hollow_cube  hollow_cube.txt  sampleScene.txt  snowman.txt  sphere_specular.txt  two_cones.txt
sample/: sample.txt
